--- a/uni_modules/v-keyboard/package.json
+++ b/uni_modules/v-keyboard/package.json
@@ -1,17 +1,16 @@
 {
 	"id": "v-keyboard",
-	"displayName": "v-keyboard",
-	"version": "1.0.0",
+	"displayName": "键盘",
+	"version": "1.0.1",
 	"description": "v-keyboard",
 	"keywords": [
-		"v-keyboard",
-		"键盘",
-		"数字键盘",
-		"身份证",
-		"密码",
-		"货币"
-	],
-	"repository": "",
+        "v-keyboard",
+        "键盘",
+        "身份证",
+        "密码",
+        "金额"
+    ],
+	"repository": "https://github.com/xfjpeter/uni-plugins",
 	"engines": {
 		"HBuilderX": "^3.1.0"
 	},
@@ -29,9 +28,9 @@
 			"qq": ""
 		},
 		"declaration": {
-			"ads": "",
-			"data": "",
-			"permissions": ""
+			"ads": "无",
+			"data": "插件不采集任何数据",
+			"permissions": "无"
 		},
 		"npmurl": ""
 	},
@@ -40,45 +39,45 @@
 		"encrypt": [],
 		"platforms": {
 			"cloud": {
-				"tcb": "u",
-				"aliyun": "u"
+				"tcb": "y",
+				"aliyun": "y"
 			},
 			"client": {
 				"Vue": {
-					"vue2": "u",
+					"vue2": "y",
 					"vue3": "u"
 				},
 				"App": {
-					"app-vue": "u",
+					"app-vue": "y",
 					"app-nvue": "u"
 				},
 				"H5-mobile": {
-					"Safari": "u",
-					"Android Browser": "u",
-					"微信浏览器(Android)": "u",
-					"QQ浏览器(Android)": "u"
+					"Safari": "y",
+					"Android Browser": "y",
+					"微信浏览器(Android)": "y",
+					"QQ浏览器(Android)": "y"
 				},
 				"H5-pc": {
-					"Chrome": "u",
-					"IE": "u",
-					"Edge": "u",
-					"Firefox": "u",
-					"Safari": "u"
+					"Chrome": "y",
+					"IE": "n",
+					"Edge": "y",
+					"Firefox": "y",
+					"Safari": "y"
 				},
 				"小程序": {
-					"微信": "u",
-					"阿里": "u",
-					"百度": "u",
-					"字节跳动": "u",
-					"QQ": "u",
-					"钉钉": "u",
-					"快手": "u",
-					"飞书": "u",
-					"京东": "u"
+					"微信": "y",
+					"阿里": "y",
+					"百度": "y",
+					"字节跳动": "y",
+					"QQ": "y",
+					"钉钉": "y",
+					"快手": "y",
+					"飞书": "y",
+					"京东": "y"
 				},
 				"快应用": {
-					"华为": "u",
-					"联盟": "u"
+					"华为": "y",
+					"联盟": "y"
 				}
 			}
 		}
