--- a/uni_modules/v-keyboard/package.json
+++ b/uni_modules/v-keyboard/package.json
@@ -1,7 +1,7 @@
 {
 	"id": "v-keyboard",
 	"displayName": "键盘",
-	"version": "1.0.3",
+	"version": "1.0.4",
 	"description": "v-keyboard",
 	"keywords": [
         "v-keyboard",
@@ -45,7 +45,7 @@
 			"client": {
 				"Vue": {
 					"vue2": "y",
-					"vue3": "u"
+					"vue3": "y"
 				},
 				"App": {
 					"app-vue": "y",
