--- a/uni_modules/v-tabs/package.json
+++ b/uni_modules/v-tabs/package.json
@@ -1,7 +1,7 @@
 {
   "id": "v-tabs",
   "displayName": "自定义 tab 选项卡 2",
-  "version": "2.1.6",
+  "version": "2.1.8",
   "description": "自定义 tab ，支持多种样式，支持 h5 小程序 app",
   "keywords": [
     "v-tabs",
@@ -44,7 +44,7 @@
       "client": {
         "Vue": {
           "vue2": "y",
-          "vue3": "n"
+          "vue3": "y"
         },
         "App": {
           "app-vue": "y",
