--- a/uni_modules/v-tabs/package.json
+++ b/uni_modules/v-tabs/package.json
@@ -1,7 +1,7 @@
 {
   "id": "v-tabs",
   "displayName": "自定义 tab 选项卡 2",
-  "version": "2.2.2",
+  "version": "2.3.0",
   "description": "自定义 tab ，支持多种样式，支持 h5 小程序 app",
   "keywords": [
     "v-tabs",
@@ -10,7 +10,9 @@
 ],
   "repository": "https://github.com/xfjpeter/uni-plugins",
   "engines": {
-    "HBuilderX": "^3.1.0"
+    "HBuilderX": "^3.1.0",
+    "uni-app": "^4.0",
+    "uni-app-x": "^4.0"
   },
   "dcloudext": {
     "type": "component-vue",
@@ -30,54 +32,66 @@
       "data": "无",
       "permissions": "无"
     },
-    "npmurl": ""
+    "npmurl": "",
+    "darkmode": "x",
+    "i18n": "x",
+    "widescreen": "x"
   },
   "uni_modules": {
     "dependencies": [],
     "encrypt": [],
     "platforms": {
       "cloud": {
-        "tcb": "y",
-        "aliyun": "y",
-        "alipay": "n"
+        "tcb": "√",
+        "aliyun": "√",
+        "alipay": "x"
       },
       "client": {
-        "Vue": {
-          "vue2": "y",
-          "vue3": "y"
+        "uni-app": {
+          "vue": {
+            "vue2": "√",
+            "vue3": "√"
+          },
+          "web": {
+            "safari": "√",
+            "chrome": "√"
+          },
+          "app": {
+            "vue": "√",
+            "nvue": "x",
+            "android": "√",
+            "ios": "√",
+            "harmony": "√"
+          },
+          "mp": {
+            "weixin": "√",
+            "alipay": "√",
+            "toutiao": "√",
+            "baidu": "√",
+            "kuaishou": "√",
+            "jd": "√",
+            "harmony": "√",
+            "qq": "√",
+            "lark": "√"
+          },
+          "quickapp": {
+            "huawei": "√",
+            "union": "√"
+          }
         },
-        "App": {
-            "app-vue": "y",
-            "app-nvue": "n",
-            "app-uvue": "u"
-        },
-        "H5-mobile": {
-          "Safari": "y",
-          "Android Browser": "y",
-          "微信浏览器(Android)": "y",
-          "QQ浏览器(Android)": "y"
-        },
-        "H5-pc": {
-          "Chrome": "y",
-          "IE": "n",
-          "Edge": "y",
-          "Firefox": "y",
-          "Safari": "y"
-        },
-        "小程序": {
-          "微信": "y",
-          "阿里": "y",
-          "百度": "y",
-          "字节跳动": "y",
-          "QQ": "y",
-          "钉钉": "y",
-          "快手": "y",
-          "飞书": "y",
-          "京东": "y"
-        },
-        "快应用": {
-          "华为": "u",
-          "联盟": "u"
+        "uni-app-x": {
+          "web": {
+            "safari": "-",
+            "chrome": "-"
+          },
+          "app": {
+            "android": "-",
+            "ios": "-",
+            "harmony": "-"
+          },
+          "mp": {
+            "weixin": "-"
+          }
         }
       }
     }
